Fix nav-project spacing between items

--- a/modules/nav-project/style.scss
+++ b/modules/nav-project/style.scss
@@ -21,7 +21,7 @@
         color: $marron-fonce;
       }
 
-      & + & {
+      + li {
         margin-left: 4rem;
       }
     }
